# actix-sms

./: README.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/: package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/sse/: page.tsx
frontend/app/websocket/: page.tsx
frontend/components/: Navigation.tsx
