[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
actix = "0.13.5"
actix-cors = "0.7.1"
actix-web-actors = "4.3.1+deprecated"
actix-rt = "2.11.0"
mongodb = "3.6.0"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
redis = {version = "1.2.0", features = ["tokio-comp"]}
futures = "0.3.32"
tokio = "1.52.1"
tokio-stream = "0.1.18"
bytes = "1.11.1"
rand = "0.10.1"
uuid = "1.23.1"
